clusters/homelab-1/.network-policies/allow-ingress-from-external/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-external
spec:
  podSelector:
    matchLabels:
      networking/ingress-allow-external-nginx: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: ingress-nginx-external-app
              app.kubernetes.io/name: ingress-nginx
